fix sonarqube findings